<resources>
    <string name="app_name">Consumo de combustibles</string>
    <string name="imagen">imagen</string>
    <string name="integrantes">Integrantes</string>
    <string name="carnet">Carnet</string>
    <string name="angel_saravia">Angel Saravia</string>
    <string name="erick_reyes">Erick Reyes</string>
    <string name="_261118">#261118</string>
    <string name="_261318">#261318</string>
    <string name="tema">TEMA</string>
    <string name="created_by">Created By:</string>
    <string name="erick">Erick Alcides Reyes Avila</string>
    <string name="angel">Angel Sebastian Saravia Serpas</string>
    <string name="grupo">Grupo</string>
    <string name="ds39_a">DS39-A</string>
    <string name="registro_de_compra">REGISTRO DE COMPRA</string>
    <string name="factura"># Factura</string>
    <string name="km">KM al momento de carga</string>
    <string name="btncompra">Registrar Compra</string>
    <string name="monto">Monto de Compra</string>
    <string name="formato_fecha">31/01/2021</string>
    <string name="Promedios">Promedios</string>
    <string name="fecha_inicio">Fecha Inicio</string>
    <string name="fecha_fin">Fecha Fin</string>
    <string name="desc">Consumo promedio segun cantidad de recargas por periodo.</string>
    <string name="tipoGasolina">Diesel</string>
    <string name="km_promedio">Km promedio</string>
    <string name="gasto_promedio">Gasto promedio</string>
    <string name="prom">8.70</string>
    <string name="promkm">80</string>
    <string name="Gas_Station_LLC" />
    <string name="filtar_por_fecha">Filtar por fecha</string>
    <string name="base_de_datos_compras">Base de Datos Compras</string>
    <string name="n_factura">N°</string>
    <string name="fecha">Fecha</string>
    <string name="kmT">KM</string>
    <string name="tipo">Tipo</string>
    <string name="montoT">Monto</string>
    <string name="totales">Totales</string>
    <string name="mostrar">Listado de compras</string>
</resources>