<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCategorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txvTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/tipoGasolina"
                android:textColor="#000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/lyCategorias"
                android:layout_width="match_parent"
                android:layout_height="109dp"
                android:layout_margin="10dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/lyInte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txvIn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/km_promedio"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imvCursor"
                            android:layout_width="0dp"
                            android:layout_marginTop="10dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:contentDescription="@string/imagen"
                            app:srcCompat="@drawable/cursor" />

                        <TextView
                            android:id="@+id/txvPromKm"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:text="@string/promkm"
                            android:textColor="@color/design_default_color_primary_variant"
                            android:textSize="36sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lyC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txvCar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/gasto_promedio"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imgDolar"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/imagen"
                            app:srcCompat="@drawable/signo" />

                        <TextView
                            android:id="@+id/txvPromDinero"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:text="@string/prom"
                            android:textColor="@color/design_default_color_primary_variant"
                            android:textSize="36sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>